--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="styl-popup">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="stylesheet" href="css/themes/default.css" /> -->
+    <title>Styl</title>
   </head>
 
-  <body>
-    <h2>Side Panel Extension</h2>
+  <body class="loading">
+    <div id="panes">
+      <div id="main">
+        
+      </div>
   </body>
 </html>
