--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -2,15 +2,17 @@
 <html id="styl-popup">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" href="css/themes/default.css" /> -->
+    <link rel="stylesheet" href="./sidepanel.css" />
     <title>Styl</title>
   </head>
 
   <body class="loading">
     <div id="panes">
-      <div id="main">
-        
+      <div class="main">
+        <button id="element-picker-button">
+          <img src="../images/html_brackets.svg" width="40px" height="40px"/>
+        </div>      
       </div>
   </body>
+  <script type="text/javascript" src="../../dist/sidepanel.js"></script>
 </html>
