Getting close to drawrect in content script

--- a/src/inject/elementpicker.html
+++ b/src/inject/elementpicker.html
@@ -1,2 +1,8 @@
 <!doctype html>
+<head>
+    <link rel="stylesheet" href="./elementpicker.css"/>
+</head>
+<body>
+    <svg id="rect"><path></path></svg>
+</body>
 <script src="../../dist/elementpicker.js"></script>
