Messaging working - starting drawrect

--- a/src/inject/elementpicker.html
+++ b/src/inject/elementpicker.html
@@ -3,6 +3,10 @@
     <link rel="stylesheet" href="./elementpicker.css"/>
 </head>
 <body>
-    <svg id="rect"><path></path></svg>
+    <svg id="rect">
+        <rect>
+
+        </rect>
+    </svg>
 </body>
 <script src="../../dist/elementpicker.js"></script>
