Element picker visual working!

--- a/src/inject/elementpicker.html
+++ b/src/inject/elementpicker.html
@@ -3,10 +3,13 @@
     <link rel="stylesheet" href="./elementpicker.css"/>
 </head>
 <body>
-    <svg id="rect">
-        <rect>
+    <svg>
+        <path id="rect">
 
-        </rect>
+        </path>
     </svg>
+    <b id="test">
+        
+    </b>
 </body>
 <script src="../../dist/elementpicker.js"></script>
